[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_script"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="SFXContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SFXContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.8

[node name="MusicContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="FullscreenContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/FullscreenContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckButton" parent="CenterContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2

[node name="VSyncContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VSyncContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "VSync"

[node name="VSyncCheck" type="CheckButton" parent="CenterContainer/VBoxContainer/VSyncContainer"]
layout_mode = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ResolutionContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="CenterContainer/VBoxContainer/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/SFXContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/FullscreenContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/VSyncContainer/VSyncCheck" to="." method="_on_vsync_check_toggled"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/ResolutionContainer/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
